update contents to latest headlong