@@ -16,7 +16,7 @@
 package com.esaulpaugh.headlong.abi;
 
 import com.esaulpaugh.headlong.TestUtils;
-import com.esaulpaugh.headlong.abi.util.JsonUtils;
+import com.esaulpaugh.headlong.util.FastHex;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonPrimitive;
@@ -25,15 +25,23 @@ import org.junit.jupiter.api.Test;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.EnumSet;
+import java.util.Iterator;
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
+import static com.esaulpaugh.headlong.TestUtils.assertThrown;
+import static com.esaulpaugh.headlong.abi.ABIType.FLAGS_NONE;
 import static com.esaulpaugh.headlong.abi.ABIType.TYPE_CODE_ARRAY;
 import static com.esaulpaugh.headlong.abi.ABIType.TYPE_CODE_TUPLE;
+import static com.esaulpaugh.headlong.abi.UnitType.UNIT_LENGTH_BYTES;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -41,212 +49,205 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ABIJSONTest {
 
-    private static final String FUNCTION_A_JSON = """
-            {
-              "type": "function",
-              "name": "foo",
-              "inputs": [
-                {
-                  "name": "complex_nums",
-                  "type": "tuple[][]",
-                  "components": [
-                    {
-                      "name": "real",
-                      "type": "decimal"
-                    },
-                    {
-                      "name": "imaginary",
-                      "type": "decimal"
-                    }
-                  ]
-                }
-              ],
-              "outputs": [
-                {
-                  "name": "count",
-                  "type": "uint64"
-                }
-              ],
-              "constant": false
-            }""";
+    private static final String FUNCTION_A_JSON = "{\n" +
+            "  \"type\": \"function\",\n" +
+            "  \"name\": \"foo\",\n" +
+            "  \"inputs\": [\n" +
+            "    {\n" +
+            "      \"name\": \"complex_nums\",\n" +
+            "      \"type\": \"tuple[][]\",\n" +
+            "      \"components\": [\n" +
+            "        {\n" +
+            "          \"name\": \"real\",\n" +
+            "          \"type\": \"fixed168x10\"\n" +
+            "        },\n" +
+            "        {\n" +
+            "          \"name\": \"imaginary\",\n" +
+            "          \"type\": \"fixed168x10\"\n" +
+            "        }\n" +
+            "      ]\n" +
+            "    }\n" +
+            "  ],\n" +
+            "  \"outputs\": [\n" +
+            "    {\n" +
+            "      \"name\": \"count\",\n" +
+            "      \"type\": \"uint64\"\n" +
+            "    }\n" +
+            "  ]\n" +
+            "}";
 
-    private static final String FUNCTION_B_JSON = """
-            {
-              "type": "function",
-              "name": "func",
-              "inputs": [
-                {
-                  "name": "aa",
-                  "type": "tuple",
-                  "components": [
-                    {
-                      "name": "aa_d",
-                      "type": "decimal"
-                    },
-                    {
-                      "name": "aa_f",
-                      "type": "fixed128x18"
-                    }
-                  ]
-                },
-                {
-                  "name": "bb",
-                  "type": "fixed128x18[]"
-                },
-                {
-                  "name": "cc",
-                  "type": "tuple",
-                  "components": [
-                    {
-                      "name": "cc_uint",
-                      "type": "uint256"
-                    },
-                    {
-                      "name": "cc_int_arr",
-                      "type": "int256[]"
-                    },
-                    {
-                      "name": "cc_tuple_arr",
-                      "type": "tuple[]",
-                      "components": [
-                        {
-                          "type": "int8"
-                        },
-                        {
-                          "type": "uint40"
-                        }
-                      ]
-                    }
-                  ]
-                }
-              ],
-              "outputs": [],
-              "stateMutability": "view",
-              "constant": true
-            }""";
+    private static final String FUNCTION_B_JSON = "{\n" +
+            "  \"type\": \"function\",\n" +
+            "  \"name\": \"func\",\n" +
+            "  \"inputs\": [\n" +
+            "    {\n" +
+            "      \"name\": \"aa\",\n" +
+            "      \"type\": \"tuple\",\n" +
+            "      \"components\": [\n" +
+            "        {\n" +
+            "          \"name\": \"aa_d\",\n" +
+            "          \"type\": \"fixed168x10\"\n" +
+            "        },\n" +
+            "        {\n" +
+            "          \"name\": \"aa_f\",\n" +
+            "          \"type\": \"fixed128x18\"\n" +
+            "        }\n" +
+            "      ]\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"bb\",\n" +
+            "      \"type\": \"fixed128x18[]\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"cc\",\n" +
+            "      \"type\": \"tuple\",\n" +
+            "      \"components\": [\n" +
+            "        {\n" +
+            "          \"name\": \"cc_uint\",\n" +
+            "          \"type\": \"uint256\"\n" +
+            "        },\n" +
+            "        {\n" +
+            "          \"name\": \"cc_int_arr\",\n" +
+            "          \"type\": \"int256[]\"\n" +
+            "        },\n" +
+            "        {\n" +
+            "          \"name\": \"cc_tuple_arr\",\n" +
+            "          \"type\": \"tuple[]\",\n" +
+            "          \"components\": [\n" +
+            "            {\n" +
+            "              \"type\": \"int8\"\n" +
+            "            },\n" +
+            "            {\n" +
+            "              \"type\": \"uint40\"\n" +
+            "            }\n" +
+            "          ]\n" +
+            "        }\n" +
+            "      ]\n" +
+            "    }\n" +
+            "  ],\n" +
+            "  \"outputs\": [],\n" +
+            "  \"stateMutability\": \"view\"\n" +
+            "}";
 
-    private static final String CONTRACT_JSON = """
-            [
-              {
-                "type": "event",
-                "name": "an_event",
-                "inputs": [
-                  {
-                    "name": "a",
-                    "type": "bytes",
-                    "indexed": true
-                  },
-                  {
-                    "name": "b",
-                    "type": "uint256",
-                    "indexed": false
-                  }
-                ]
-              },
-              {
-                "type": "function",
-                "name": "",
-                "inputs": [
-                  {
-                    "name": "aa",
-                    "type": "tuple",
-                    "components": [
-                      {
-                        "name": "aa_d",
-                        "type": "decimal"
-                      },
-                      {
-                        "name": "aa_f",
-                        "type": "fixed128x18"
-                      }
-                    ]
-                  },
-                  {
-                    "name": "bb",
-                    "type": "fixed128x18[]"
-                  },
-                  {
-                    "name": "cc",
-                    "type": "tuple",
-                    "components": [
-                      {
-                        "name": "cc_uint",
-                        "type": "uint256"
-                      },
-                      {
-                        "name": "cc_int_arr",
-                        "type": "int256[]"
-                      },
-                      {
-                        "name": "cc_tuple_arr",
-                        "type": "tuple[]",
-                        "components": [
-                          {
-                            "name": "cc_tuple_arr_int_eight",
-                            "type": "int8"
-                          },
-                          {
-                            "name": "cc_tuple_arr_uint_forty",
-                            "type": "uint40"
-                          }
-                        ]
-                      }
-                    ]
-                  }
-                ],
-                "outputs": [],
-                "constant": false
-              }
-            ]""";
+    private static final String CONTRACT_JSON = "[\n" +
+            "  {\n" +
+            "    \"type\": \"event\",\n" +
+            "    \"name\": \"an_event\",\n" +
+            "    \"inputs\": [\n" +
+            "      {\n" +
+            "        \"name\": \"a\",\n" +
+            "        \"type\": \"bytes\",\n" +
+            "        \"indexed\": true\n" +
+            "      },\n" +
+            "      {\n" +
+            "        \"name\": \"b\",\n" +
+            "        \"type\": \"uint256\",\n" +
+            "        \"indexed\": false\n" +
+            "      }\n" +
+            "    ],\n" +
+            "    \"anonymous\": true\n" +
+            "  },\n" +
+            "  {\n" +
+            "    \"type\": \"function\",\n" +
+            "    \"name\": \"\",\n" +
+            "    \"inputs\": [\n" +
+            "      {\n" +
+            "        \"name\": \"aa\",\n" +
+            "        \"type\": \"tuple\",\n" +
+            "        \"components\": [\n" +
+            "          {\n" +
+            "            \"name\": \"aa_d\",\n" +
+            "            \"type\": \"fixed168x10\"\n" +
+            "          },\n" +
+            "          {\n" +
+            "            \"name\": \"aa_f\",\n" +
+            "            \"type\": \"fixed128x18\"\n" +
+            "          }\n" +
+            "        ]\n" +
+            "      },\n" +
+            "      {\n" +
+            "        \"name\": \"bb\",\n" +
+            "        \"type\": \"fixed128x18[]\"\n" +
+            "      },\n" +
+            "      {\n" +
+            "        \"name\": \"cc\",\n" +
+            "        \"type\": \"tuple\",\n" +
+            "        \"components\": [\n" +
+            "          {\n" +
+            "            \"name\": \"cc_uint\",\n" +
+            "            \"type\": \"uint256\"\n" +
+            "          },\n" +
+            "          {\n" +
+            "            \"name\": \"cc_int_arr\",\n" +
+            "            \"type\": \"int256[]\"\n" +
+            "          },\n" +
+            "          {\n" +
+            "            \"name\": \"cc_tuple_arr\",\n" +
+            "            \"type\": \"tuple[]\",\n" +
+            "            \"components\": [\n" +
+            "              {\n" +
+            "                \"name\": \"cc_tuple_arr_int_eight\",\n" +
+            "                \"type\": \"int8\"\n" +
+            "              },\n" +
+            "              {\n" +
+            "                \"name\": \"cc_tuple_arr_uint_forty\",\n" +
+            "                \"type\": \"uint40\"\n" +
+            "              }\n" +
+            "            ]\n" +
+            "          }\n" +
+            "        ]\n" +
+            "      }\n" +
+            "    ],\n" +
+            "    \"outputs\": []\n" +
+            "  }\n" +
+            "]";
 
-    private static final String FALLBACK_CONSTRUCTOR_RECEIVE = """
-            [
-              {
-                "type": "fallback",
-                "stateMutability": "pure",
-                "constant": true
-              },
-              {
-                "type": "constructor",
-                "inputs": [
-                  {
-                    "name": "aha",
-                    "type": "bool"
-                  }
-                ],
-                "stateMutability": "nonpayable",
-                "constant": false
-              },
-              {
-                "type": "receive",
-                "name": "receive",
-                "stateMutability": "payable",
-                "constant": false
-              }
-            ]""";
+    private static final String FALLBACK_CONSTRUCTOR_RECEIVE = "[\n" +
+            "  {\n" +
+            "    \"type\": \"fallback\",\n" +
+            "    \"stateMutability\": \"pure\"\n" +
+            "  },\n" +
+            "  {\n" +
+            "    \"type\": \"constructor\",\n" +
+            "    \"inputs\": [\n" +
+            "      {\n" +
+            "        \"name\": \"aha\",\n" +
+            "        \"type\": \"bool\"\n" +
+            "      }\n" +
+            "    ],\n" +
+            "    \"stateMutability\": \"nonpayable\"\n" +
+            "  },\n" +
+            "  {\n" +
+            "    \"type\": \"receive\",\n" +
+            "    \"stateMutability\": \"payable\"\n" +
+            "  }\n" +
+            "]";
 
-    private static void toString(ABIType<?> type, StringBuilder sb) {
+    private static void toString(String name, ABIType<?> type, StringBuilder sb) {
         switch (type.typeCode()) {
-        case TYPE_CODE_ARRAY -> {
+        case TYPE_CODE_ARRAY:
             sb.append('[');
-            toString(((ArrayType<? extends ABIType<?>, ?>) type).getElementType(), sb);
+            toString(null, type.asArrayType().getElementType(), sb);
             sb.append(']');
-        }
-        case TYPE_CODE_TUPLE -> {
+            break;
+        case TYPE_CODE_TUPLE:
             sb.append('(');
-            for (ABIType<?> e : (TupleType) type) {
-                toString(e, sb);
+            int i = 0;
+            TupleType<?> tt = (TupleType<?>) type;
+            for(ABIType<?> e : tt) {
+                toString(tt.getElementName(i++), e, sb);
             }
             sb.append(')');
+            break;
+        default:
+            sb.append(type);
         }
-        default -> sb.append(type);
-        }
-        sb.append(' ').append(type.getName()).append(',');
+        sb.append(' ').append(name).append(',');
     }
 
-    private static void printTupleType(TupleType tupleType) {
+    private static void printTupleType(TupleType<?> tupleType) {
         StringBuilder sb = new StringBuilder("RECURSIVE = ");
-        toString(tupleType, sb);
+        toString(null, tupleType, sb);
         System.out.println(sb);
     }
 
@@ -258,63 +259,74 @@ public class ABIJSONTest {
         int i = 0;
         jsons[i++] = FUNCTION_A_JSON;
         jsons[i++] = FUNCTION_B_JSON;
-        JsonArray contractArray = JsonUtils.parseArray(CONTRACT_JSON);
+        JsonArray contractArray = TestUtils.parseArray(CONTRACT_JSON);
         final int n = contractArray.size();
         for (int j = 0; j < n; j++) {
-            jsons[i++] = JsonUtils.toPrettyPrint(contractArray.get(j).getAsJsonObject());
+            jsons[i++] = TestUtils.toPrettyPrint(contractArray.get(j).getAsJsonObject());
         }
-        JsonArray fallbackEtc = JsonUtils.parseArray(FALLBACK_CONSTRUCTOR_RECEIVE);
+        JsonArray fallbackEtc = TestUtils.parseArray(FALLBACK_CONSTRUCTOR_RECEIVE);
         final int n2 = fallbackEtc.size();
         for (int j = 0; j < n2; j++) {
-            jsons[i++] = JsonUtils.toPrettyPrint(fallbackEtc.get(j).getAsJsonObject());
+            jsons[i++] = TestUtils.toPrettyPrint(fallbackEtc.get(j).getAsJsonObject());
         }
 
         for (String originalJson : jsons) {
-            ABIObject orig = ABIJSON.parseABIObject(JsonUtils.parseObject(originalJson));
+            ABIObject orig = ABIObject.fromJson(FLAGS_NONE, TestUtils.parseObject(originalJson).toString());
             String newJson = orig.toJson(false);
             assertNotEquals(originalJson, newJson);
 
-            ABIObject reconstructed = ABIJSON.parseABIObject(JsonUtils.parseObject(newJson));
+            ABIObject reconstructed = ABIObject.fromJson(FLAGS_NONE, TestUtils.parseObject(newJson).toString());
 
             assertEquals(orig, reconstructed);
             assertEquals(originalJson, reconstructed.toString());
-
-            if(orig instanceof Function) {
-                assertEquals(orig, ABIJSON.parseFunction(newJson));
-            } else {
-                assertEquals(orig, ABIJSON.parseEvent(newJson));
-            }
+            assertEquals(orig, ABIObject.fromJson(newJson));
         }
     }
 
     @Test
     public void testParseFunctionA() throws Throwable {
-        final JsonObject object = JsonUtils.parseObject(FUNCTION_A_JSON);
-        final Function f = Function.fromJsonObject(object);
-        final TupleType in = f.getInputs();
-        final TupleType out = f.getOutputs();
+
+        assertEquals(
+                "foo((fixed168x10,fixed168x10)[11][6])",
+                Function.fromJson(FUNCTION_A_JSON.replace("tuple[][]", "tuple[11][6]")).getCanonicalSignature()
+        );
+
+        final JsonObject object = TestUtils.parseObject(FUNCTION_A_JSON);
+        final Function f = Function.fromJson(FLAGS_NONE, object.toString());
+        assertEquals(FUNCTION_A_JSON, f.toJson(true));
+        final TupleType<?> in = f.getInputs();
+        final TupleType<?> out = f.getOutputs();
         final ABIType<?> out0 = out.get(0);
 
-        System.out.println(f.getName() + " : " + f.getCanonicalSignature() + " : " + out0);
-        assertEquals(1, in.elementTypes.size());
-        assertEquals(1, out.elementTypes.size());
+        final BigInteger val = BigInteger.valueOf(40L);
+        final Object obj = val;
+        final Object a = out.<ABIType<Object>>get(0).encode(val);
+        final Object b = out.<ABIType<? super Object>>get(0).encode(obj);
+        assertEquals(a, b);
+        final ABIType<? super Object> type = out.get(0);
+        assertEquals(a, type.encode(obj));
+        assertEquals(a, type.encode(val));
 
-        assertEquals("foo((decimal,decimal)[][])", f.getCanonicalSignature());
+        System.out.println(f.getName() + " : " + f.getCanonicalSignature() + " : " + out0);
+        assertEquals(1, in.elementTypes.length);
+        assertEquals(1, out.elementTypes.length);
+
+        assertEquals("foo((fixed168x10,fixed168x10)[][])", f.getCanonicalSignature());
         assertEquals("uint64", out0.getCanonicalType());
 
         assertFalse(out0.isDynamic());
         assertNull(f.getStateMutability());
-        f.encodeCallWithArgs((Object) new Tuple[][] { new Tuple[] { new Tuple(new BigDecimal(BigInteger.ONE, 10), new BigDecimal(BigInteger.TEN, 10)) } });
+        f.encodeCallWithArgs((Object) new Tuple[][] { new Tuple[] { Tuple.of(new BigDecimal(BigInteger.ONE, 10), new BigDecimal(BigInteger.TEN, 10)) } });
 
         printTupleType(in);
         printTupleType(out);
 
-        Function f2 = ABIObject.fromJson(FUNCTION_A_JSON).asFunction();
+        Function f2 = ABIObject.fromJson(FUNCTION_A_JSON);
         assertEquals(f, f2);
-        assertEquals(f, ABIObject.fromJsonObject(object));
+        assertEquals(f, ABIObject.fromJson(FLAGS_NONE, object.toString()));
 
-        TestUtils.assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.ContractError", f2::asContractError);
-        TestUtils.assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Event", f2::asEvent);
+        assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.ContractError", f2::asContractError);
+        assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Event", f2::asEvent);
 
         assertTrue(f.isFunction());
         assertFalse(f.isEvent());
@@ -326,9 +338,10 @@ public class ABIJSONTest {
     @Test
     public void testParseFunctionB() {
         final Function f = Function.fromJson(FUNCTION_B_JSON);
+        assertEquals(FUNCTION_B_JSON, f.toJson(true));
         System.out.println(f.getName() + " : " + f.getCanonicalSignature());
         assertEquals(TupleType.EMPTY, f.getOutputs());
-        assertEquals("func((decimal,fixed128x18),fixed128x18[],(uint256,int256[],(int8,uint40)[]))", f.getCanonicalSignature());
+        assertEquals("func((fixed168x10,fixed128x18),fixed128x18[],(uint256,int256[],(int8,uint40)[]))", f.getCanonicalSignature());
         assertEquals("view", f.getStateMutability());
 
         printTupleType(f.getInputs());
@@ -338,17 +351,17 @@ public class ABIJSONTest {
     public void testParseFunction2() throws Throwable {
         final JsonObject function = new JsonObject();
 
-        TestUtils.CustomRunnable parse = () -> Function.fromJsonObject(function);
+        TestUtils.CustomRunnable parse = () -> Function.fromJson(FLAGS_NONE, function.toString());
 
-        TestUtils.assertThrown(IllegalArgumentException.class, "type is \"function\"; functions of this type must define name", parse);
+        assertThrown(NullPointerException.class, parse);
 
         function.add("type", new JsonPrimitive("event"));
 
-        TestUtils.assertThrown(IllegalArgumentException.class, "unexpected type: \"event\"", parse);
+        assertThrown(IllegalArgumentException.class, "unexpected type", parse);
 
         function.add("type", new JsonPrimitive("function"));
 
-        TestUtils.assertThrown(IllegalArgumentException.class, "type is \"function\"; functions of this type must define name", parse);
+        assertThrown(IllegalArgumentException.class, "type is \"function\"; functions of this type must define name", parse);
 
         TestUtils.CustomRunnable[] updates = new TestUtils.CustomRunnable[] {
                 () -> function.add("type", new JsonPrimitive("fallback")),
@@ -371,36 +384,36 @@ public class ABIJSONTest {
     public void testParseEvent() throws Throwable {
         JsonObject jsonObject = new JsonObject();
 
-        TestUtils.CustomRunnable runnable = () -> Event.fromJsonObject(jsonObject);
+        TestUtils.CustomRunnable runnable = () -> Event.fromJson(FLAGS_NONE, jsonObject.toString());
 
-        TestUtils.assertThrown(IllegalArgumentException.class, "unexpected type: null", runnable);
+        assertThrown(NullPointerException.class, runnable);
 
         jsonObject.add("type", new JsonPrimitive("event"));
 
-        TestUtils.assertThrown(IllegalArgumentException.class, "array \"inputs\" null or not found", runnable);
+        assertThrown(NullPointerException.class, runnable);
 
         jsonObject.add("inputs", new JsonArray());
 
-        TestUtils.assertThrown(NullPointerException.class, runnable);
+        assertThrown(NullPointerException.class, runnable);
 
         jsonObject.add("name", new JsonPrimitive("a_name"));
 
         runnable.run();
 
-        Event expectedA = Event.create("a_name", TupleType.parse("()"));
-        Event expectedB = Event.create("a_name", TupleType.EMPTY);
+        Event<?> expectedA = Event.create("a_name", TupleType.parse("()"));
+        Event<?> expectedB = Event.create("a_name", TupleType.EMPTY);
         assertEquals(expectedA, expectedB);
         assertEquals(expectedA.hashCode(), expectedB.hashCode());
 
         String json = jsonObject.toString();
         assertEquals(expectedA, Event.fromJson(json));
 
-        Event e = ABIObject.fromJson(json).asEvent();
+        Event<?> e = ABIObject.fromJson(json);
         assertEquals(expectedA, e);
-        assertEquals(e, ABIObject.fromJsonObject(jsonObject));
+        assertEquals(e, ABIObject.fromJson(FLAGS_NONE, jsonObject.toString()));
 
-        TestUtils.assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.ContractError", e::asContractError);
-        TestUtils.assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Function", e::asFunction);
+        assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.ContractError", e::asContractError);
+        assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Function", e::asFunction);
 
         assertFalse(e.isFunction());
         assertTrue(e.isEvent());
@@ -409,16 +422,20 @@ public class ABIJSONTest {
 
     @Test
     public void testAnonymousEvent() {
-        TupleType inputs1 = TupleType.parse("(bool[],int,(uint32,string)[])");
-        TupleType inputs2 = TupleType.parse(inputs1.canonicalType);
-        TupleType inputs3 = Function.parse("foo(bool[],int,(uint32,string)[])").getInputs();
-        Event a = Event.createAnonymous("x17", inputs1, true, false, true);
-        Event b = Event.createAnonymous("x17", inputs2, true, false, true);
-        Event c = new Event("x17", true, inputs3, true, false, true);
+        TupleType<?> inputs1 = TupleType.parse("(bool[],int,(uint32,string)[])");
+        TupleType<?> inputs2 = TupleType.parse(inputs1.canonicalType);
+        TupleType<?> inputs3 = Function.parse("foo(bool[],int,(uint32,string)[])").getInputs();
+        Event<?> a = Event.createAnonymous("x17", inputs1, true, false, true);
+        Event<?> b = Event.createAnonymous("x17", inputs2, true, false, true);
+        Event<?> c = new Event<>("x17", true, inputs3, true, false, true);
         assertEquals(a, b);
         assertEquals(a, c);
         assertEquals(a.hashCode(), b.hashCode());
         assertEquals(a.hashCode(), c.hashCode());
+        assertEquals(a.toString(), b.toString());
+
+        assertEquals(a.toJson(true), b.toJson(true));
+        assertEquals(a.toJson(false), b.toJson(false));
     }
 
     @Test
@@ -474,148 +491,193 @@ public class ABIJSONTest {
 
     @Test
     public void testGetEvents() {
-        List<Event> events = ABIJSON.parseEvents(CONTRACT_JSON);
+        List<Event<Tuple>> events = ABIJSON.parseEvents(CONTRACT_JSON);
 
         assertEquals(1, events.size());
 
-        Event event = events.get(0);
+        Event<?> event = events.get(0);
 
         assertEquals("an_event", event.getName());
         assertEquals(TupleType.parse("(bytes,uint256)"), event.getInputs());
         assertEquals(TupleType.parse("(bytes)"), event.getIndexedParams());
         assertEquals(TupleType.parse("(uint256)"), event.getNonIndexedParams());
         assertArrayEquals(new boolean[] { true, false }, event.getIndexManifest());
+        assertTrue(event.isElementIndexed(0));
+        assertFalse(event.isElementIndexed(1));
 
-        assertEquals("a", event.getInputs().get(0).getName());
-        assertEquals("b", event.getInputs().get(1).getName());
+        assertEquals("a", event.getInputs().getElementName(0));
+        assertEquals("b", event.getInputs().getElementName(1));
 
-        assertEquals("a", event.getIndexedParams().get(0).getName());
-        assertEquals("b", event.getNonIndexedParams().get(0).getName());
+        assertEquals("a", event.getIndexedParams().getElementName(0));
+        assertEquals("b", event.getNonIndexedParams().getElementName(0));
 
-        final String eventJson = """
-                {
-                  "type": "event",
-                  "name": "an_event",
-                  "inputs": [
-                    {
-                      "name": "a",
-                      "type": "bytes",
-                      "indexed": true
-                    },
-                    {
-                      "name": "b",
-                      "type": "uint256",
-                      "indexed": false
-                    }
-                  ]
-                }""";
-
-        System.out.println(eventJson);
+        final String eventJson = "{\n" +
+                "  \"type\": \"event\",\n" +
+                "  \"name\": \"an_event\",\n" +
+                "  \"inputs\": [\n" +
+                "    {\n" +
+                "      \"name\": \"a\",\n" +
+                "      \"type\": \"bytes\",\n" +
+                "      \"indexed\": true\n" +
+                "    },\n" +
+                "    {\n" +
+                "      \"name\": \"b\",\n" +
+                "      \"type\": \"uint256\",\n" +
+                "      \"indexed\": false\n" +
+                "    }\n" +
+                "  ],\n" +
+                "  \"anonymous\": true\n" +
+                "}";
 
         assertEquals(eventJson, event.toJson(true));
     }
-    
-    private static final String ERROR_JSON = """
-            {
-              "type": "error",
-              "name": "InsufficientBalance",
-              "inputs": [
-                {
-                  "name": "available",
-                  "type": "uint256"
-                },
-                {
-                  "name": "required",
-                  "type": "uint256"
-                }
-              ]
-            }""";
-    
+
+    private static final String ERROR_JSON = "{\n" +
+                "  \"type\": \"error\",\n" +
+                "  \"name\": \"InsufficientBalance\",\n" +
+                "  \"inputs\": [\n" +
+                "    {\n" +
+                "      \"name\": \"available\",\n" +
+                "      \"type\": \"uint256\"\n" +
+                "    },\n" +
+                "    {\n" +
+                "      \"name\": \"required\",\n" +
+                "      \"type\": \"uint24\"\n" +
+                "    }\n" +
+                "  ]\n" +
+                "}";
+
     private static final String ERROR_JSON_ARRAY = "[" + ERROR_JSON + "]";
 
     @Test
     public void testGetErrors() throws Throwable {
-        JsonObject object = JsonUtils.parseObject(ERROR_JSON);
+        JsonObject object = TestUtils.parseObject(ERROR_JSON);
 
-        ContractError error0 = ABIJSON.parseErrors(ERROR_JSON_ARRAY).get(0);
-        ContractError error1 = ABIJSON.parseError(object);
+        ContractError<Tuple> error0 = ABIJSON.parseErrors(ERROR_JSON_ARRAY).get(0);
+        ContractError<?> error1 = ABIObject.fromJson(ERROR_JSON);
+        ContractError<Pair<BigInteger, Integer>> error2 = ABIObject.fromJson(FLAGS_NONE, object.toString());
+
+        {
+            TupleType<Pair<BigInteger, Integer>> in = error2.getInputs();
+            Pair<BigInteger, Integer> pair = in.decode(new byte[UNIT_LENGTH_BYTES * 2]);
+            BigInteger a = pair.get0();
+            Integer b = pair.get1();
+            assertEquals(BigInteger.ZERO, a);
+            assertEquals(0, b);
+        }
 
         testError(error0, ERROR_JSON, object);
         testError(error1, ERROR_JSON, object);
+        testError(error2, ERROR_JSON, object);
 
         assertEquals(error0, error1);
+        assertEquals(error0, error2);
 
-        TestUtils.assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Function", error0::asFunction);
-        TestUtils.assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Event", error0::asEvent);
+        assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Function", error0::asFunction);
+        assertThrown(ClassCastException.class, "com.esaulpaugh.headlong.abi.Event", error0::asEvent);
     }
 
-    private static void testError(ContractError error, String json, JsonObject object) {
+    private static void testError(ContractError<?> error, String json, JsonObject object) {
         assertEquals(TypeEnum.ERROR, error.getType());
         assertEquals("InsufficientBalance", error.getName());
-        assertEquals(TupleType.parse("(uint,uint)"), error.getInputs());
-        assertEquals("InsufficientBalance(uint256,uint256)", error.getCanonicalSignature());
-        assertEquals(Function.parse("InsufficientBalance(uint,uint)"), error.function());
+        assertEquals(TupleType.parse("(uint,uint24)"), error.getInputs());
+        assertEquals("InsufficientBalance(uint256,uint24)", error.getCanonicalSignature());
+        assertEquals(Function.parse("InsufficientBalance(uint,uint24)"), error.function());
         assertEquals(json, error.toJson(true));
         assertEquals(json, error.toString());
 
         testEqualNotSame(error, ContractError.fromJson(json));
-        testEqualNotSame(error, ContractError.fromJsonObject(object));
-        testEqualNotSame(error, ABIObject.fromJson(json).asContractError());
-        testEqualNotSame(error, ABIObject.fromJsonObject(object).asContractError());
+        testEqualNotSame(error, ContractError.fromJson(FLAGS_NONE, object.toString()));
+        testEqualNotSame(error, ABIObject.fromJson(json));
+        testEqualNotSame(error, ABIObject.fromJson(FLAGS_NONE, object.toString()));
 
         assertFalse(error.isFunction());
         assertFalse(error.isEvent());
         assertTrue(error.isContractError());
     }
 
-    private static void testEqualNotSame(ContractError a, ContractError b) {
+    private static void testEqualNotSame(ContractError<?> a, ContractError<?> b) {
         assertNotSame(a, b);
         assertEquals(a.hashCode(), b.hashCode());
         assertEquals(a.toString(), b.toString());
         assertEquals(a, b);
     }
 
-    @Test
-    public void testJsonUtils() {
-        JsonObject empty = new JsonObject();
-        Boolean b = JsonUtils.getBoolean(empty, "constant");
-        assertNull(b);
-        Boolean b2 = JsonUtils.getBoolean(empty, "constant", null);
-        assertNull(b2);
-    }
+    private static final Set<TypeEnum> FUNCTIONS_AND_EVENTS = EnumSet.of(TypeEnum.FUNCTION, TypeEnum.RECEIVE, TypeEnum.FALLBACK, TypeEnum.CONSTRUCTOR, TypeEnum.EVENT);
+    private static final Set<TypeEnum> EVENTS_AND_ERRORS = EnumSet.of(TypeEnum.EVENT, TypeEnum.ERROR);
 
     @Test
     public void testParseElements() throws Throwable {
-        
-        List<ABIObject> list = ABIJSON.parseElements(CONTRACT_JSON, EnumSet.noneOf(TypeEnum.class));
+
+        List<ABIObject> list = ABIJSON.parseElements(ABIType.FLAG_LEGACY_DECODE, CONTRACT_JSON, EnumSet.noneOf(TypeEnum.class));
         assertEquals(0, list.size());
-        
+
         list = ABIJSON.parseElements(CONTRACT_JSON);
         assertEquals(2, list.size());
         assertTrue(list.stream().anyMatch(ABIObject::isEvent));
         assertTrue(list.stream().anyMatch(ABIObject::isFunction));
 
-        list = ABIJSON.parseElements(CONTRACT_JSON, EnumSet.of(TypeEnum.FUNCTION, TypeEnum.RECEIVE, TypeEnum.FALLBACK, TypeEnum.CONSTRUCTOR, TypeEnum.EVENT));
+        list = ABIJSON.parseElements(CONTRACT_JSON, FUNCTIONS_AND_EVENTS);
         assertEquals(2, list.size());
         assertTrue(list.stream().anyMatch(ABIObject::isEvent));
         assertTrue(list.stream().anyMatch(ABIObject::isFunction));
-        
-        list = ABIJSON.parseElements(CONTRACT_JSON, EnumSet.of(TypeEnum.EVENT, TypeEnum.ERROR));
+        assertFalse(list.stream().anyMatch(ABIObject::isContractError));
+
+        list = ABIJSON.parseElements(CONTRACT_JSON, EVENTS_AND_ERRORS);
         assertEquals(1, list.size());
         assertTrue(list.stream().anyMatch(ABIObject::isEvent));
-        
+
         List<Function> fList = ABIJSON.parseElements(CONTRACT_JSON, ABIJSON.FUNCTIONS);
         assertEquals(1, fList.size());
         assertTrue(fList.stream().anyMatch(ABIObject::isFunction));
-        
-        List<ContractError> errList = ABIJSON.parseElements(ERROR_JSON_ARRAY, ABIJSON.ERRORS);
+
+        List<ContractError<?>> errList = ABIJSON.parseElements(ERROR_JSON_ARRAY, ABIJSON.ERRORS);
         assertEquals(1, errList.size());
         assertTrue(errList.stream().anyMatch(ABIObject::isContractError));
 
-        TestUtils.assertThrown(UnsupportedOperationException.class, () -> ABIJSON.FUNCTIONS.add(TypeEnum.EVENT));
-        TestUtils.assertThrown(UnsupportedOperationException.class, () -> ABIJSON.EVENTS.add(TypeEnum.CONSTRUCTOR));
-        TestUtils.assertThrown(UnsupportedOperationException.class, () -> ABIJSON.ERRORS.add(TypeEnum.EVENT));
-        TestUtils.assertThrown(UnsupportedOperationException.class, () -> ABIJSON.ALL.remove(TypeEnum.EVENT));
+        assertThrown(UnsupportedOperationException.class, () -> ABIJSON.FUNCTIONS.add(TypeEnum.EVENT));
+        assertThrown(UnsupportedOperationException.class, () -> ABIJSON.EVENTS.add(TypeEnum.CONSTRUCTOR));
+        assertThrown(UnsupportedOperationException.class, () -> ABIJSON.ERRORS.add(TypeEnum.EVENT));
+        assertThrown(UnsupportedOperationException.class, () -> ABIJSON.ALL.remove(TypeEnum.EVENT));
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    public void testIteratorAndStream() throws Throwable {
+        assertFalse(ABIJSON.iterator(ABIType.FLAG_LEGACY_DECODE, CONTRACT_JSON, EnumSet.noneOf(TypeEnum.class)).hasNext());
+        assertFalse(ABIJSON.iterator(ABIType.FLAG_LEGACY_DECODE, "[]", ABIJSON.ALL).hasNext());
+        assertEquals(0, (int) ABIJSON.stream("[]").count());
+
+        Iterator<ABIObject> iter;
+        for (Set<?> set : new Set[] { ABIJSON.ALL, FUNCTIONS_AND_EVENTS, EnumSet.of(TypeEnum.EVENT, TypeEnum.FUNCTION) }) {
+            iter = ABIJSON.iterator(FLAGS_NONE, CONTRACT_JSON, (Set<TypeEnum>) set);
+            assertTrue(iter.next().isEvent());
+            assertTrue(iter.next().isFunction());
+            assertFalse(iter.hasNext());
+            assertThrown(NoSuchElementException.class, iter::next);
+            assertEquals(2, ABIJSON.stream(CONTRACT_JSON).count());
+            assertTrue(ABIJSON.stream(CONTRACT_JSON).anyMatch(ABIObject::isEvent));
+            assertTrue(ABIJSON.stream(CONTRACT_JSON).anyMatch(ABIObject::isFunction));
+            assertFalse(ABIJSON.stream(CONTRACT_JSON).anyMatch(ABIObject::isContractError));
+        }
+
+        iter = ABIJSON.iterator(FLAGS_NONE, CONTRACT_JSON, EVENTS_AND_ERRORS);
+        assertTrue(iter.next().isEvent());
+        assertFalse(iter.hasNext());
+        assertTrue(ABIJSON.stream(CONTRACT_JSON).anyMatch(ABIObject::isEvent));
+
+        Iterator<Function> fIter = ABIJSON.iterator(FLAGS_NONE, CONTRACT_JSON, ABIJSON.FUNCTIONS);
+        assertInstanceOf(Function.class, fIter.next());
+        assertFalse(fIter.hasNext());
+        assertTrue(ABIJSON.stream(CONTRACT_JSON).anyMatch(ABIObject::isFunction));
+
+        Iterator<ContractError<Tuple>> errIter = ABIJSON.iterator(FLAGS_NONE, ERROR_JSON_ARRAY, ABIJSON.ERRORS);
+        assertInstanceOf(ContractError.class, errIter.next());
+        assertFalse(errIter.hasNext());
+        assertEquals(1, ABIJSON.stream(ERROR_JSON_ARRAY).count());
+        assertInstanceOf(ContractError.class, ABIJSON.stream(ERROR_JSON_ARRAY).filter(ABIObject::isContractError).findFirst().get());
+
+        assertFalse(ABIJSON.iterator(FLAGS_NONE, ERROR_JSON_ARRAY, ABIJSON.FUNCTIONS).hasNext());
     }
 
     @Test
@@ -624,12 +686,12 @@ public class ABIJSONTest {
             List<ABIObject> list = ABIJSON.parseElements(CONTRACT_JSON, EnumSet.noneOf(TypeEnum.class));
             assertEquals(0, list.size());
 
-            list = ABIJSON.parseElements(CONTRACT_JSON, EnumSet.of(TypeEnum.FUNCTION, TypeEnum.EVENT));
+            list = ABIJSON.parseElements(CONTRACT_JSON, FUNCTIONS_AND_EVENTS);
             assertEquals(2, list.size());
             assertTrue(list.stream().anyMatch(ABIObject::isEvent));
             assertTrue(list.stream().anyMatch(ABIObject::isFunction));
 
-            list = ABIJSON.parseElements(CONTRACT_JSON, EnumSet.of(TypeEnum.EVENT, TypeEnum.ERROR));
+            list = ABIJSON.parseElements(CONTRACT_JSON, EVENTS_AND_ERRORS);
             assertEquals(1, list.size());
             assertTrue(list.stream().anyMatch(ABIObject::isEvent));
 
@@ -637,7 +699,7 @@ public class ABIJSONTest {
             assertEquals(1, fList.size());
             assertTrue(fList.stream().anyMatch(ABIObject::isFunction));
 
-            List<ContractError> errList = ABIJSON.parseElements(ERROR_JSON_ARRAY, EnumSet.of(TypeEnum.ERROR));
+            List<ContractError<?>> errList = ABIJSON.parseElements(ERROR_JSON_ARRAY, EnumSet.of(TypeEnum.ERROR));
             assertEquals(1, errList.size());
             assertTrue(errList.stream().anyMatch(ABIObject::isContractError));
         }
@@ -673,33 +735,188 @@ public class ABIJSONTest {
         List<Function> functions = objects.stream()
                 .filter(ABIObject::isFunction)
                 .map(ABIObject::asFunction)
-                .toList();
+                .collect(Collectors.toList());
         assertEquals(1, functions.size());
 
-        List<Event> events = objects.stream()
+        List<Event<?>> events = objects.stream()
                 .filter(ABIObject::isEvent)
                 .map(ABIObject::asEvent)
-                .toList();
+                .collect(Collectors.toList());
         assertEquals(1, events.size());
 
-        List<ContractError> errors = objects.stream()
+        List<ContractError<?>> errors = objects.stream()
                 .filter(ABIObject::isContractError)
                 .map(ABIObject::asContractError)
-                .toList();
+                .collect(Collectors.toList());
         assertEquals(0, errors.size());
 
         List<ABIType<?>> flat = objects.stream()
                 .map(ABIObject::getInputs)
                 .flatMap(ABIJSONTest::flatten)
-                .toList();
+                .collect(Collectors.toList());
 
         assertEquals(8, flat.size());
     }
 
     public static Stream<ABIType<?>> flatten(ABIType<?> type) {
-        return type instanceof TupleType tupleType
-                ? StreamSupport.stream(tupleType.spliterator(), false)
+        return type instanceof TupleType<?>
+                ? StreamSupport.stream(((TupleType<?>) type).spliterator(), false)
                     .flatMap(ABIJSONTest::flatten)
                 : Stream.of(type);
+    }
+
+    @Test
+    public void testInternalType() throws Throwable {
+        String eventStr = EVENT_STR;
+
+        Event<Single<Single<String>[]>> e = Event.fromJson(eventStr);
+
+        TupleType<Single<Single<String>[]>> in = e.getInputs();
+        Single<Single<String>[]> s = in.decode(
+                FastHex.decode(
+                        "0000000000000000000000000000000000000000000000000000000000000020" +
+                        "0000000000000000000000000000000000000000000000000000000000000001" +
+                        "0000000000000000000000000000000000000000000000000000000000000020" +
+                        "0000000000000000000000000000000000000000000000000000000000000020" +
+                        "0000000000000000000000000000000000000000000000000000000000000006" +
+                        "000a09080c0d0000000000000000000000000000000000000000000000000000"
+                )
+        );
+        final Single<String>[] arr = s.get0();
+        assertEquals(Single[].class, arr.getClass());
+        final Single<String> single = arr[0];
+        final String str = single.get0();
+        assertEquals(String.class, str.getClass());
+        assertEquals("\0\n\t\b\f\r", str);
+        assertEquals("struct Thing[]", in.getElementInternalType(0));
+
+        TupleType<?> indexed = e.getIndexedParams();
+        assertEquals(0, indexed.size());
+
+        TupleType<?> nonIndexed = e.getNonIndexedParams();
+        assertEquals("struct Thing[]", nonIndexed.getElementInternalType(0));
+
+        assertThrown(ArrayIndexOutOfBoundsException.class, () -> nonIndexed.getElementInternalType(-1));
+        assertThrown(ArrayIndexOutOfBoundsException.class, () -> nonIndexed.getElementInternalType(1));
+
+        assertEquals(eventStr, e.toString());
+    }
+
+    private static final String EVENT_STR = "{\n" +
+            "  \"type\": \"event\",\n" +
+            "  \"name\": \"ManyThings\",\n" +
+            "  \"inputs\": [\n" +
+            "    {\n" +
+            "      \"internalType\": \"struct Thing[]\",\n" +
+            "      \"name\": \"thing\",\n" +
+            "      \"type\": \"tuple[]\",\n" +
+            "      \"components\": [\n" +
+            "        {\n" +
+            "          \"name\": \"thing_string\",\n" +
+            "          \"type\": \"string\"\n" +
+            "        }\n" +
+            "      ],\n" +
+            "      \"indexed\": false\n" +
+            "    }\n" +
+            "  ],\n" +
+            "  \"anonymous\": false\n" +
+            "}";
+
+    @Test
+    public void testStaticTupleArray() throws Throwable {
+        String eventStr = EVENT_STR.replace("tuple[]", "tuple[1]");
+
+        Event<Single<Single<String>[]>> e = Event.fromJson(eventStr);
+
+        TupleType<Single<Single<String>[]>> in = e.getInputs();
+        Single<Single<String>[]> s = in.decode(
+                FastHex.decode(
+                        "0000000000000000000000000000000000000000000000000000000000000020" +
+                        "0000000000000000000000000000000000000000000000000000000000000020" +
+                        "0000000000000000000000000000000000000000000000000000000000000020" +
+                        "0000000000000000000000000000000000000000000000000000000000000006" +
+                        "000a09080c0d0000000000000000000000000000000000000000000000000000"
+                )
+        );
+        final Single<String>[] arr = s.get0();
+        assertEquals(Single[].class, arr.getClass());
+        final Single<String> single = arr[0];
+        final String str = single.get0();
+        assertEquals(String.class, str.getClass());
+        assertEquals("\0\n\t\b\f\r", str);
+        assertEquals("struct Thing[]", in.getElementInternalType(0));
+
+        TupleType<?> indexed = e.getIndexedParams();
+        assertEquals(0, indexed.size());
+
+        TupleType<?> nonIndexed = e.getNonIndexedParams();
+        assertEquals("struct Thing[]", nonIndexed.getElementInternalType(0));
+
+        assertThrown(ArrayIndexOutOfBoundsException.class, () -> nonIndexed.getElementInternalType(-1));
+        assertThrown(ArrayIndexOutOfBoundsException.class, () -> nonIndexed.getElementInternalType(1));
+
+        assertEquals(eventStr, e.toString());
+    }
+
+    @Test
+    public void testUserDefinedValueTypes() {
+        String json = "{\n" +
+                "  \"type\": \"constructor\",\n" +
+                "  \"inputs\": [\n" +
+                "    {\n" +
+                "      \"internalType\": \"MyNamespace.UIntMax\",\n" +
+                "      \"name\": \"unsigned256\",\n" +
+                "      \"type\": \"uint256\"\n" +
+                "    },\n" +
+                "    {\n" +
+                "      \"internalType\": \"CustomType\",\n" +
+                "      \"name\": \"signed24\",\n" +
+                "      \"type\": \"int24\"\n" +
+                "    },\n" +
+                "    {\n" +
+                "      \"internalType\": \"SomeOtherDudesNamespace.Bytes\",\n" +
+                "      \"name\": \"byteArr\",\n" +
+                "      \"type\": \"bytes\"\n" +
+                "    },\n" +
+                "    {\n" +
+                "      \"internalType\": \"contract AContract\",\n" +
+                "      \"name\": \"contractAddr\",\n" +
+                "      \"type\": \"address\"\n" +
+                "    }\n" +
+                "  ],\n" +
+                "  \"stateMutability\": \"pure\"\n" +
+                "}";
+
+        Function f = Function.fromJson(json);
+
+        TupleType<?> in = f.getInputs();
+        assertEquals("MyNamespace.UIntMax", in.getElementInternalType(0));
+        assertEquals("CustomType", in.getElementInternalType(1));
+        assertEquals("SomeOtherDudesNamespace.Bytes", in.getElementInternalType(2));
+        assertEquals("contract AContract", in.getElementInternalType(3));
+
+        assertEquals(json, f.toString());
+    }
+
+    @Test
+    public void testParseABIField() {
+        final String json = "{\n" +
+                "  \"abi\": [\n" +
+                "    {\n" +
+                "      \"name\": \"aller\",\n" +
+                "      \"inputs\": [\n" +
+                "        { \"name\": \"amt\", \"type\": \"uint256\" },\n" +
+                "        { \"name\": \"balance\", \"type\": \"uint256\" },\n" +
+                "        { \"name\": \"rate\", \"type\": \"uint256\" },\n" +
+                "        { \"name\": \"dest\", \"type\": \"address\" },\n" +
+                "        { \"name\": \"msg\", \"type\": \"string\" }\n" +
+                "      ]\n" +
+                "    }\n" +
+                "  ]\n" +
+                "}";
+        final List<ABIObject> objects = ABIJSON.parseABIField(FLAGS_NONE, json, ABIJSON.ALL);
+        assertEquals(1, objects.size());
+        assertEquals(TypeEnum.FUNCTION, objects.get(0).getType());
+        assertEquals("aller(uint256,uint256,uint256,address,string)", objects.get(0).getCanonicalSignature());
     }
 }
