@@ -22,6 +22,7 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigInteger;
+import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -31,15 +32,12 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Random;
 import java.util.Set;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 
 import static com.esaulpaugh.headlong.TestUtils.CustomRunnable;
 import static com.esaulpaugh.headlong.TestUtils.assertThrown;
-import static com.esaulpaugh.headlong.TestUtils.requireNoTimeout;
-import static com.esaulpaugh.headlong.TestUtils.shutdownAwait;
 import static com.esaulpaugh.headlong.rlp.RLPDecoder.RLP_LENIENT;
 import static com.esaulpaugh.headlong.rlp.RLPDecoder.RLP_STRICT;
 import static com.esaulpaugh.headlong.util.Strings.UTF_8;
@@ -88,7 +86,7 @@ public class RLPDecoderTest {
                 new byte[] { (byte) 0x82, 0, 99 },
                 new byte[] { (byte) 0x84, 0, -128, 2, 1 },
                 new byte[] { (byte) 0x88, 0, -1, 6, 5, 4, 3, 2, 1 },
-                RLPEncoder.encodeString(new byte[] { 0, 0, -50, 90, 12, 4, 13, 21, 89, -120 })
+                RLPEncoder.string(new byte[] { 0, 0, -50, 90, 12, 4, 13, 21, 89, -120 })
         };
 
         TestUtils.assertThrown(IllegalArgumentException.class, errPrefix + "0, len: 1", RLP_STRICT.wrap(vectors[0])::asByte);
@@ -106,42 +104,14 @@ public class RLPDecoderTest {
 
     @Disabled("slow")
     @Test
-    public void exhaustiveFuzz() throws InterruptedException, TimeoutException {
-        ExecutorService executorService = Executors.newWorkStealingPool();
-        ExhaustiveFuzzTask[] tasks = new ExhaustiveFuzzTask[256];
-        for (int i = 0; i < tasks.length; i++) {
-            System.out.print(i + " -> ");
-            tasks[i] = new ExhaustiveFuzzTask(new byte[] { (byte) i, 0, 0, 0 });
-            executorService.submit(tasks[i]);
-        }
-        requireNoTimeout(shutdownAwait(executorService, 2000L));
-        long valid = 0, invalid = 0;
-        for (ExhaustiveFuzzTask task : tasks) {
-            if(task != null) {
-                valid += task.valid;
-                invalid += task.invalid;
-            }
-        }
-        String result = valid + " / " + (valid + invalid) + " (" + invalid + " invalid)";
-        System.out.println(result);
-        assertEquals("2273312768 / 4294967296 (2021654528 invalid)", result);
-    }
+    public void exhaustiveFuzz() throws InterruptedException, TimeoutException, ExecutionException {
 
-    private static class ExhaustiveFuzzTask implements Runnable {
+        final long[] valids = new long[256];
+        final long[] invalids = new long[256];
 
-        private final byte[] four;
-        long valid, invalid;
-        private final String tag;
-
-        ExhaustiveFuzzTask(byte[] four) {
-            this.four = four;
-            this.tag = Arrays.toString(four);
-            System.out.println(tag);
-        }
-
-        @Override
-        public void run() {
-            byte[] four = this.four;
+        TestUtils.parallelRun(256, 2000L, (int i) -> {
+            final byte[] four = new byte[] { (byte) i, 0, 0, 0 };
+            System.out.println(i + " -> " + Arrays.toString(four));
             byte one = 0, two = 0, three = 0;
             int valid = 0, invalid = 0;
             boolean gogo = true;
@@ -163,10 +133,22 @@ public class RLPDecoderTest {
                     invalid++;
                 }
             } while(gogo);
-            System.out.println(tag + "END " + Strings.encode(four));
-            this.valid = valid;
-            this.invalid = invalid;
+            valids[i] = valid;
+            invalids[i] = invalid;
+            System.out.println(i + "\tEND " + Strings.encode(four));
+        }).run();
+
+        long valid = 0;
+        for (long v : valids) {
+            valid += v;
         }
+        long invalid = 0;
+        for (long iv : invalids) {
+            invalid += iv;
+        }
+        String result = valid + " / " + (valid + invalid) + " (" + invalid + " invalid)";
+        System.out.println(result);
+        assertEquals("2273312768 / 4294967296 (2021654528 invalid)", result);
     }
 
     @Test
@@ -187,9 +169,11 @@ public class RLPDecoderTest {
                 valid++;
                 if (item.asBoolean()) {
                     switch (first) {
-                    case "c0", "80", "00" -> throw exception(buffer);
-                    default -> {
-                    }
+                    case "c0":
+                    case "80":
+                    case "00":
+                        throw exception(buffer, null);
+                    default:
                     }
                 } else {
                     switch (first) {
@@ -198,10 +182,10 @@ public class RLPDecoderTest {
                     case "00":
                         break;
                     default:
-                        throw exception(buffer);
+                        throw exception(buffer, null);
                     }
                     if (item.asChar(true) != '\u0000') {
-                        throw exception(buffer);
+                        throw exception(buffer, null);
                     }
                 }
             } catch (IllegalArgumentException iae) {
@@ -211,24 +195,25 @@ public class RLPDecoderTest {
                     if(!decoder.lenient && DataType.isSingleByte(buffer[1])) {
                         break;
                     }
-                    throw exception(buffer);
+                    throw exception(buffer, iae);
                 case "b8": case "b9": case "ba": case "bb": case "bc": case "bd": case "be": case "bf":
                 case "f8": case "f9": case "fa": case "fb": case "fc": case "fd": case "fe": case "ff":
                     break;
                 default:
-                    throw exception(buffer);
+                    throw exception(buffer, iae);
                 }
             }
         }
         System.out.println("valid: " + valid + " / " + n + " (" + invalid + " invalid) lenient=" + decoder.lenient);
     }
 
-    private static RuntimeException exception(byte[] buffer) {
-        return new RuntimeException(Strings.encode(buffer));
+    private static RuntimeException exception(byte[] buffer, Throwable cause) {
+        return new RuntimeException(Strings.encode(buffer), cause);
     }
 
     @Test
     public void testListIterable() throws Throwable {
+        assertThrown(ClassCastException.class, () -> RLP_LENIENT.wrapString(LONG_LIST_BYTES));
         final RLPList rlpList = RLP_STRICT.wrapList(LONG_LIST_BYTES);
         assertEquals(DataType.LIST_LONG, rlpList.type());
         assertFalse(rlpList.isString());
@@ -259,14 +244,22 @@ public class RLPDecoderTest {
     public void duplicateString() {
         RLPString str = RLP_STRICT.wrap(LONG_LIST_BYTES, 13);
         RLPString dup = str.duplicate();
+
+        assertEquals(str, dup);
+        assertEquals(str.hashCode(), dup.hashCode());
+        assertEquals(str.toString(), dup.toString());
+        assertEquals(str.type(), dup.type());
+
         assertEquals(0, dup.index);
         assertEquals(str.dataIndex - str.index, dup.dataIndex);
         assertEquals(str.encodingLength(), dup.encodingLength());
         assertEquals(str.dataLength, dup.dataLength);
         assertEquals(str.endIndex - str.index, dup.endIndex);
-        assertEquals(str, dup);
         assertTrue(str.isString());
         assertFalse(str.isList());
+
+        assertArrayEquals(str.encoding(), dup.encoding());
+        assertArrayEquals(str.data(), dup.data());
     }
 
     @Test
@@ -275,14 +268,23 @@ public class RLPDecoderTest {
         System.arraycopy(LONG_LIST_BYTES, 0, buffer, 7, LONG_LIST_BYTES.length);
         RLPList list = RLP_STRICT.wrapList(buffer, 7);
         RLPList dup = list.duplicate();
+
+        assertEquals(list, dup);
+        assertEquals(list.hashCode(), dup.hashCode());
+        assertEquals(list.toString(), dup.toString());
+        assertEquals(list.type(), dup.type());
+
         assertEquals(0, dup.index);
         assertEquals(list.dataIndex - list.index, dup.dataIndex);
         assertEquals(list.encodingLength(), dup.encodingLength());
         assertEquals(list.dataLength, dup.dataLength);
         assertEquals(LONG_LIST_BYTES.length, dup.endIndex);
-        assertEquals(list, dup);
         assertFalse(list.isString());
         assertTrue(list.isList());
+
+        assertArrayEquals(list.encoding(), dup.encoding());
+        assertArrayEquals(list.data(), dup.data());
+        assertArrayEquals(list.elements().toArray(RLPItem.EMPTY_ARRAY), dup.elements().toArray(RLPItem.EMPTY_ARRAY));
     }
 
     @Test
@@ -395,9 +397,9 @@ public class RLPDecoderTest {
 
         long[] dataLengths = new long[] {
                 56,
-                Integer.MAX_VALUE / (((int) Math.pow(2, 23)) - 1),
-                Integer.MAX_VALUE / (((int) Math.pow(2, 15)) - 1),
-                Integer.MAX_VALUE / (((int) Math.pow(2, 7)) - 1)
+                1L << 8,
+                1L << 16,
+                1L << 24
         };
 
         for (int k = 0; k < dataLengths.length; k++) {
@@ -470,25 +472,25 @@ public class RLPDecoderTest {
 
     @Test
     public void booleans() {
-        assertFalse(RLP_STRICT.wrap((byte) 0xc0).asBoolean());
-        assertFalse(RLP_STRICT.wrap((byte) 0x80).asBoolean());
-        assertFalse(RLP_STRICT.wrap((byte) 0x00).asBoolean());
+        assertFalse(RLP_STRICT.wrapBits(0xc0).asBoolean());
+        assertFalse(RLP_STRICT.wrapBits(0x80).asBoolean());
+        assertFalse(RLP_STRICT.wrapBits(0x00).asBoolean());
 
         assertTrue(RLP_LENIENT.wrap(new byte[] { (byte) 0x81, (byte) 0x00 }).asBoolean());
         assertTrue(RLP_LENIENT.wrap(new byte[] { (byte) 0x81, (byte) 0x01 }).asBoolean());
 
         assertTrue(RLP_STRICT.wrap(new byte[] { (byte) 0x81, (byte) 0x80 }).asBoolean());
 
-        assertTrue(RLP_STRICT.wrap((byte) 0x01).asBoolean());
+        assertTrue(RLP_STRICT.wrapBits(0x01).asBoolean());
 
-        assertTrue(RLP_STRICT.wrap((byte) 0x79).asBoolean());
+        assertTrue(RLP_STRICT.wrapBits(0x79).asBoolean());
     }
 
     @Test
     public void chars() {
         byte[][] burma17 = new byte[256][];
         for (int i = 0; i < burma17.length; i++) {
-            burma17[i] = RLPEncoder.encodeString((byte) i);
+            burma17[i] = RLPEncoder.string(i);
         }
 
         HashSet<Character> chars = new HashSet<>(512);
@@ -506,22 +508,28 @@ public class RLPDecoderTest {
         assertEquals(256, chars.size());
         assertEquals(128, sizeTwo.size());
 
-        assertEquals('\0', RLP_STRICT.wrap((byte) 0xc0).asChar(false));
-        assertEquals('\0', RLP_STRICT.wrap((byte) 0x80).asChar(false));
-        assertEquals('\0', RLP_STRICT.wrap((byte) 0x00).asChar(true));
+        assertEquals('\0', RLP_STRICT.wrapBits(0xc0).asChar(false));
+        assertEquals('\0', RLP_STRICT.wrapBits(0x80).asChar(false));
+        assertEquals('\0', RLP_STRICT.wrapBits(0x00).asChar(true));
+        assertEquals('\u0009', RLP_STRICT.wrapBits(0x820009).asChar(true));
+
+        assertEquals('\0', RLP_STRICT.wrapBits(0xc0L).asChar(false));
+        assertEquals('\0', RLP_STRICT.wrapBits(0x80L).asChar(false));
+        assertEquals('\0', RLP_STRICT.wrapBits(0x00L).asChar(true));
+        assertEquals('\u0009', RLP_STRICT.wrapBits(0x820009L).asChar(true));
     }
 
     @Test
     public void collect() {
-        
+
         Set<Object> objectSet = new HashSet<>();
         int numAdded = collectUntil(LONG_LIST_BYTES, 0, LONG_LIST_BYTES.length, objectSet);
         assertEquals(1, numAdded);
         assertEquals(1, objectSet.size());
 
-        assertEquals(1, RLPDecoder.RLP_STRICT.stream(LONG_LIST_BYTES)
+        assertEquals(1, RLPDecoder.stream(RLP_STRICT.sequenceIterator(LONG_LIST_BYTES))
                 .collect(Collectors.toSet()).size());
-        
+
         byte[] rlp = new byte[9];
         for (int i = 0; i < rlp.length; i++) {
             rlp[i] = (byte) i;
@@ -530,7 +538,7 @@ public class RLPDecoderTest {
         collectN(rlp, 0, 5, hashSet);
         assertEquals(5, hashSet.size());
         for (int i = 0; i < 5; i++) {
-            assertTrue(hashSet.contains(RLP_STRICT.wrap((byte) i)));
+            assertTrue(hashSet.contains(RLP_STRICT.wrapBits(i)));
         }
 
         hashSet = new HashSet<>();
@@ -538,14 +546,14 @@ public class RLPDecoderTest {
         assertEquals(7, n);
         assertEquals(7, hashSet.size());
         for (int i = 0; i < 7; i++) {
-            assertTrue(hashSet.contains(RLP_STRICT.wrap((byte) i)));
+            assertTrue(hashSet.contains(RLP_STRICT.wrapBits(i)));
         }
 
         hashSet = new HashSet<>();
         collectN(rlp, 4, 3, hashSet);
         assertEquals(3, hashSet.size());
         for (int i = 4; i < 7; i++) {
-            assertTrue(hashSet.contains(RLP_STRICT.wrap((byte) i)));
+            assertTrue(hashSet.contains(RLP_STRICT.wrapBits(i)));
         }
 
         hashSet = new HashSet<>();
@@ -553,26 +561,26 @@ public class RLPDecoderTest {
         assertEquals(5, n);
         assertEquals(5, hashSet.size());
         for (int i = 1; i < 6; i++) {
-            assertTrue(hashSet.contains(RLP_STRICT.wrap((byte) i)));
+            assertTrue(hashSet.contains(RLP_STRICT.wrapBits(i)));
         }
 
         hashSet = new HashSet<>();
         n = collectAll(rlp, 0, hashSet);
         assertEquals(9, n);
         for (int i = 0; i < 9; i++) {
-            assertTrue(hashSet.contains(RLP_STRICT.wrap((byte) i)));
+            assertTrue(hashSet.contains(RLP_STRICT.wrapBits(i)));
         }
 
         List<RLPItem> list = collectN(rlp, 4);
         assertEquals(4, list.size());
         for (int i = 0; i < 4; i++) {
-            assertEquals(list.get(i), RLP_STRICT.wrap((byte) i));
+            assertEquals(list.get(i), RLP_STRICT.wrapBits(i));
         }
 
         list = collectN(rlp, 1, 3);
         assertEquals(3, list.size());
         for (int i = 0; i < 3; i++) {
-            assertEquals(list.get(i), RLP_STRICT.wrap((byte) (i + 1)));
+            assertEquals(list.get(i), RLP_STRICT.wrapBits(i + 1));
         }
 
         list = collectAll(rlp, 1);
@@ -584,7 +592,7 @@ public class RLPDecoderTest {
         list = collectUntil(rlp, 2, 8);
         assertEquals(6, list.size());
         for (int i = 0; i < 6; i++) {
-            assertEquals(list.get(i), RLP_STRICT.wrap((byte) (i + 2)));
+            assertEquals(list.get(i), RLP_STRICT.wrapBits(i + 2));
         }
     }
 
@@ -618,7 +626,7 @@ public class RLPDecoderTest {
         byte[] c = new byte[0];
 
         byte[] list = new byte[4];
-        assertEquals(list.length, RLPEncoder.encodeAsList(new Object[] { a, b, c }, list, 0));
+        assertEquals(list.length, RLPEncoder.putList(Arrays.asList(a, b, c), list, 0));
         Iterator<RLPItem> listIter = RLP_STRICT.listIterator(list);
 
         for (RLPItem item : RLP_STRICT.wrapList(list)) {
@@ -635,7 +643,7 @@ public class RLPDecoderTest {
         assertFalse(listIter.hasNext());
         assertThrown(NoSuchElementException.class, listIter::next);
 
-        byte[] sequence = RLPEncoder.encodeSequentially(c, a, b);
+        byte[] sequence = RLPEncoder.sequence(c, a, b);
         Iterator<RLPItem> seqIter = RLP_STRICT.sequenceIterator(sequence);
 
         assertTrue(seqIter.hasNext());
@@ -651,7 +659,8 @@ public class RLPDecoderTest {
 
     @Test
     public void testStreaming() {
-        List<RLPItem> collection = RLP_STRICT.stream(RLPStreamTest.RLP_BYTES).toList();
+        List<RLPItem> collection = RLPDecoder.stream(RLP_STRICT.sequenceIterator(RLPStreamTest.RLP_BYTES))
+                .collect(Collectors.toList());
 
         String joined = collection.stream()
                 .filter(RLPItem::isList)
@@ -675,12 +684,12 @@ public class RLPDecoderTest {
         RLPList list = RLP_STRICT.wrapList(LONG_LIST_BYTES);
 
         byte[] buffer = new byte[list.encodingLength()];
-        int idx = list.export(buffer, 0);
+        int idx = list.copy(buffer, 0);
         assertEquals(list.encodingLength(), idx);
         assertArrayEquals(buffer, list.encoding());
 
         buffer = new byte[list.dataLength];
-        idx = list.exportData(buffer, 0);
+        idx = list.copyData(buffer, 0);
         assertEquals(list.dataLength, idx);
         assertArrayEquals(buffer, list.data());
     }
@@ -708,9 +717,9 @@ public class RLPDecoderTest {
     }
 
     public static List<RLPItem> collectN(byte[] encodings, int index, int n) {
-        return RLP_STRICT.stream(encodings, index)
+        return RLPDecoder.stream(RLP_STRICT.sequenceIterator(encodings, index))
                 .limit(n)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static int collectAll(byte[] encodings, int index, Collection<? super RLPItem> dest) {
@@ -722,9 +731,9 @@ public class RLPDecoderTest {
     }
 
     public static void collectN(byte[] encodings, int index, int n, Collection<? super RLPItem> dest) {
-        RLP_STRICT.stream(encodings, index)
+        RLPDecoder.stream(RLP_STRICT.sequenceIterator(encodings, index))
                 .limit(n)
-                .collect(Collectors.toCollection(() -> dest));
+                .forEach(dest::add);
     }
 
     @FunctionalInterface
@@ -754,23 +763,22 @@ public class RLPDecoderTest {
 
     @Test
     public void testExports() {
-        final byte[] in = new byte[] { (byte)0x83,1,3,5 };
-        RLPItem item = RLP_STRICT.wrapString(in);
+        RLPItem item = RLP_STRICT.wrapString(new byte[] { (byte)0x83,1,3,5 });
         final byte[] out = new byte[] { 0,0,0,0,0 };
-        assertEquals(1 + item.dataLength, item.exportData(out, 1));
+        assertEquals(1 + item.dataLength, item.copyData(out, 1));
         assertArrayEquals(new byte[] {0,1,3,5,0}, out);
 
-        assertEquals(1 + item.encodingLength(), item.export(out, 1));
+        assertEquals(1 + item.encodingLength(), item.copy(out, 1));
         assertArrayEquals(new byte[] {0,(byte)0x83,1,3,5}, out);
 
         final byte[] in2 = new byte[] { 0, 0, (byte) 0xc5, 0, 1, 2, 3, (byte) 0xc0 };
         item = RLP_STRICT.wrapList(in2, 2);
 
-        assertEquals(item.dataLength, item.exportData(out, 0));
+        assertEquals(item.dataLength, item.copyData(out, 0));
         assertArrayEquals(new byte[] { 0, 1, 2, 3, (byte) 0xc0 }, out);
 
         final byte[] out2 = new byte[6];
-        assertEquals(item.encodingLength(), item.export(out2, 0));
+        assertEquals(item.encodingLength(), item.copy(out2, 0));
         assertArrayEquals(new byte[] { (byte) 0xc5, 0, 1, 2, 3, (byte) 0xc0 }, out2);
 
         final byte[] longString = new byte[58];
@@ -780,7 +788,49 @@ public class RLPDecoderTest {
         longString[57] = -3;
 
         final byte[] out3 = new byte[60];
-        assertEquals(2 + longString.length, RLP_STRICT.wrap(longString).export(out3, 2));
+        assertEquals(2 + longString.length, RLP_STRICT.wrap(longString).copy(out3, 2));
+        final byte[] expected = new byte[60];
+        expected[2] = (byte) 0xb8;
+        expected[3] = 56;
+        expected[52] = 10;
+        expected[59] = -3;
+        assertArrayEquals(expected, out3);
+    }
+
+    @Test
+    public void testExports2() {
+        RLPItem item = RLP_STRICT.wrapString(new byte[] { (byte)0x83,1,3,5 });
+        final ByteBuffer out = ByteBuffer.allocate(5);
+        out.position(1);
+        item.copyData(out);
+        assertEquals(1 + item.dataLength, out.position());
+        assertArrayEquals(new byte[] {0,1,3,5,0}, out.array());
+
+        out.position(1);
+        item.copy(out);
+        assertEquals(1 + item.encodingLength(), out.position());
+        assertArrayEquals(new byte[] {0,(byte)0x83,1,3,5}, out.array());
+
+        final byte[] in2 = new byte[] { 0, 0, (byte) 0xc5, 0, 1, 2, 3, (byte) 0xc0 };
+        item = RLP_STRICT.wrapList(in2, 2);
+
+        out.position(0);
+        item.copyData(out);
+        assertEquals(item.dataLength, out.position());
+        assertArrayEquals(new byte[] { 0, 1, 2, 3, (byte) 0xc0 }, out.array());
+
+        final byte[] out2 = new byte[6];
+        assertEquals(item.encodingLength(), item.copy(out2, 0));
+        assertArrayEquals(new byte[] { (byte) 0xc5, 0, 1, 2, 3, (byte) 0xc0 }, out2);
+
+        final byte[] longString = new byte[58];
+        longString[0] = (byte) 0xb8;
+        longString[1] = 56;
+        longString[50] = 10;
+        longString[57] = -3;
+
+        final byte[] out3 = new byte[60];
+        assertEquals(2 + longString.length, RLP_STRICT.wrap(longString).copy(out3, 2));
         final byte[] expected = new byte[60];
         expected[2] = (byte) 0xb8;
         expected[3] = 56;
@@ -796,15 +846,30 @@ public class RLPDecoderTest {
                 (byte) 0xff, (byte) 0xff, (byte) 0xff, (byte) 0xff,
         };
         assertThrown(
-                IllegalArgumentException.class,
+                ShortInputException.class,
                 "element @ index 0 exceeds its container: 9223372036854775807 > 9",
                 () -> RLP_STRICT.wrap(bytes)
         );
         bytes[0] = (byte) 0xff;
         assertThrown(
-                IllegalArgumentException.class,
+                ShortInputException.class,
                 "element @ index 0 exceeds its container: 9223372036854775807 > 9",
                 () -> RLP_STRICT.wrap(bytes)
         );
+    }
+
+    @Test
+    public void testCasts() throws Throwable {
+        final RLPItem item0 = RLP_STRICT.wrapBits(0x7f);
+        final RLPString str0 = item0.asRLPString();
+        assertThrown(ClassCastException.class, "RLPString", str0::asRLPList);
+
+
+        final RLPItem item1 = RLP_STRICT.wrapBits(0xc0);
+        assertThrown(ClassCastException.class, "RLPList", item1::asRLPString);
+        RLPList list = item1.asRLPList();
+
+        RLPString s = RLP_STRICT.wrapBits(0x70);
+        list = RLP_STRICT.wrapBits(0xc1ff);
     }
 }
